# pica

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml  dprint.json  idea.md  rustfmt.toml
.github/workflows/: openwrt-rust-binaries.yml
crates/: README.md
crates/pica-cli-rs/: Cargo.toml
crates/pica-cli-rs/src/: helpers.rs  lock.rs  main.rs  state.rs  system.rs  types.rs
crates/pica-cli-rs/src/commands/: install.rs  mod.rs  query.rs  remove.rs  sync.rs  upgrade.rs
crates/pica-core/: Cargo.toml
crates/pica-core/src/: error.rs  io.rs  lib.rs  manifest.rs  repo.rs  selector.rs  version.rs
crates/pica-pack-rs/: Cargo.toml
crates/pica-pack-rs/src/: main.rs
crates/pica-pkg-cli/: Cargo.toml
crates/pica-pkg-cli/src/: app.rs  candidate.rs  helpers.rs  lock.rs  main.rs  platform.rs  state.rs  system.rs  types.rs
crates/pica-pkg-cli/src/commands/: install.rs  query.rs  remove.rs  sync.rs  upgrade.rs
crates/pica-pkg-cli/src/commands/install/: feed.rs  mod.rs  pipeline.rs  precheck.rs
crates/pica-pkg-core/: Cargo.toml
crates/pica-pkg-core/src/: error.rs  io.rs  manifest.rs  repo.rs  selector.rs  version.rs
crates/pica-pkg-pack/: Cargo.toml
crates/pica-pkg-pack/src/: archive.rs  build.rs  main.rs  platform.rs  rewrite.rs
docs/: README.md  developer.md  standard.md  user.md
legacy/: README.md
legacy/pica-cli/: pica
legacy/pica-pack/: README.md  pica-pack
legacy/pica-pack/example/hello/: LICENSE  manifest
legacy/pica-pack/example/hello/cmd/: update
pica-cli/: pica
pica-pack/: pica-pack
pica-pack/example-app/hello/: manifest
pica-pack/example-app/hello/cmd/: hello  pica-remove  pica-sync  pica-update
pica-pack/example/hello/: manifest
pica-pack/examples/hello/cmd/: pica-remove-self  pica-update-self
pica-rs/: Cargo.toml  README.md
pica-rs/crates/pica-cli-rs/: Cargo.toml
pica-rs/crates/pica-cli-rs/src/: lock.rs  main.rs
pica-rs/crates/pica-cli-rs/src/commands/: install.rs  query.rs  (+3 more)
pica-rs/crates/pica-core/: Cargo.toml
pica-rs/crates/pica-core/src/: lib.rs  manifest.rs  repo.rs  selector.rs
pica-rs/crates/pica-pack-rs/: Cargo.toml
pica-rs/crates/pica-pack-rs/src/: main.rs
pica-rs/docs/: architecture.md  decoupling-phase1.md
src/: cpm-ctl
