[workspace]
members = [
  "crates/pica-pkg-core",
  "crates/pica-pkg-cli",
  "crates/pica-pkg-pack",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
