[package]
name = "pica-pkg-pack"
version = "0.3.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "pica-pack"
path = "src/main.rs"

[dependencies]
pica-pkg-core = { path = "../pica-pkg-core" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
